# SearchEngine

./: .gitignore  CMakeLists.txt  README.md
include/: InvertedIndex.h  SearchServer.h
include/nlohmann/: json_fwd.hpp
include/nlohmann/detail/: exceptions.hpp  json_pointer.hpp  macro_scope.hpp
include/nlohmann/detail/iterators/: iteration_proxy.hpp
include/nlohmann/detail/meta/: identity_tag.hpp
include/nlohmann/detail/output/: binary_writer.hpp  serializer.hpp
json/: answer.json  config  config.json  requests.json
res/: file001.txt  file002.txt  file004.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  main.cpp
src/lib/: ConverterJSON.cpp  ConverterJSON.h  SearchServer.cpp
src/lib/include/nlohmann/: json.hpp
src/lib/include/nlohmann/detail/input/: binary_reader.hpp
test/: CMakeLists.txt  FinalTest.cpp  StandardTest.cpp
